# animate

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements-build.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  citation_check.yml  docker.yml  test_suite.yml  test_suite_main.yml  test_suite_release.yml
animate/: __init__.py  adapt.py  checkpointing.py  interpolation.py  math.py  metric.py  quality.py  recovery.py  utility.py
animate/cxx/: metric2d.cxx  metric3d.cxx
animate/cython/: numbering.pyx
demos/: Makefile  bubble_shear.py  combining_metrics.py  demo_references.bib  hessian_based_metrics.py  metric_normalisation.py  ping_pong.py  poisson.py  simple_metric.py
docker/: Dockerfile.firedrake
install/: install_firedrake.sh  install_firedrake_custom_mpi.sh  petsc_options.txt
test/: sensors.py  test_adapt.py  test_checkpoint.py  test_demos.py  test_interpolation.py  test_math.py  test_metric.py  test_numbering.py  test_parallel.py  test_quality.py  test_recovery.py  test_riemannianmetric.py  test_setup.py  test_transfer.py  test_utility.py  to_test.sh  utility.py
test/meshes/: annulus.geo  cell-sets.geo  circle_in_square.geo  square_with_embedded_line.geo
