[build-system]
requires = ["setuptools>=77.0.3"]

[project]
name = "animate"
version = "0.4"
authors = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Davor Dundovic"},
  {name = "Stephan C. Kramer"},
  {name = "Eleda Johnson"},
]
maintainers = [
  {name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"},
  {name = "Stephan C. Kramer"},
]
description = "Anisotropic mesh adaptation toolkit for Firedrake"
readme = "README.md"
license-files = ["LICENSE"]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = [
  "Cython",
  "sympy",
  "vtk",
]

[project.optional-dependencies]
dev = [
  "cffconvert",
  "coverage",
  "parameterized",
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "ruff",
]

[project.urls]
Homepage = "https://mesh-adaptation.github.io"
Documentation = "https://mesh-adaptation.github.io/animate/index.html"
Repository = "https://github.com/mesh-adaptation/animate"

[tool.setuptools]
packages = ["animate", "adapt_common"]
ext-modules = [
  {name = "animate.cython.numbering", sources = ["animate/cython/numbering.pyx"], language = "c", depends = ["petsc", "numpy"]}
]

[tool.setuptools.package-data]
animate = [
  "cxx/*.cxx",
  "cython/*.pyx",
]

[tool.setuptools.package-dir]
adapt_common = "adapt_common/adapt_common"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # mccabe complexity
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
[tool.ruff.lint.per-file-ignores]
"demos/*" = [
  "E402",  # module level import not at top of file
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:`np.bool8` is a deprecated alias for `np.bool_`*:DeprecationWarning",
	"ignore:unable to find git revision*:UserWarning",
]
